# CarFigures

./: .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PRIVACT_POLICY.md  README.md  docker-compose.yml  json-config-ref.json  langs.yaml  pyproject.toml  settings.conf  settings.toml
assets/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
carfigures/: __init__.py  __main__.py  configs.py  display.py  docs.py  langs.py  languages.py  logging.py  settings.py
carfigures/core/: bot.py  commands.py  dev.py  metrics.py  models.py
carfigures/core/admin/: __init__.py  resources.py  routes.py
carfigures/core/image_generator/: image_gen.py
carfigures/core/imaging/: imager.py
carfigures/core/panel/: __init__.py  resources.py  routes.py
carfigures/core/utils/: imager.py  imagers.py  logging.py  menus.py  paginator.py  transformers.py
carfigures/docs/CustomCars/: english.md  info.yaml
carfigures/docs/Gameplay/: info.yaml
carfigures/docs/ServerSetup/: english.md  info.yaml
carfigures/docs/Suggesting/: english.md  info.yaml
carfigures/docs/Trading/: english.md  info.yaml
carfigures/templates/: dashboard.html
migrations/models/: 0_20220909204856_init.sql  10_20221022184330_update.sql  11_20230127140747_update.sql  12_20230224112031_update.sql  13_20230301173448_update.sql  15_20230404133020_update.sql  16_20230410144614_update.sql  17_20230420000356_update.sql  1_20220909223048_update.sql  20_20230725165036_update.sql  21_20231113175415_update.sql  22_20231115171322_update.sql  23_20231205113247_update.sql  24_20231219112238_update.sql  25_20240109160009_update.sql  26_20240121004430_update.sql  27_20240123140205_update.sql  28_20240225164026_update.sql  29_20240320142916_update.sql  2_20220910020800_update.sql  30_20240627145737_update.sql  31_20240715185955_update.sql  32_20240805163619_update.sql  32_20241109172345_update.sql  33_20241228004513_update.sql  3_20220913220923_update.sql  4_20220915164836_update.sql  5_20220924005726_update.sql  6_20220924014717_update.sql  7_20220926000044_update.sql  8_20220926000601_update.sql  9_20221007231725_update.sql
