[tool.poetry]
name = "carfigures"
version = "1.0.0a1"
description = ""
authors = ["array_ye <array_ye@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

# asyncio
uvloop = { version = "^0.17.0", markers = "sys_platform != 'win32'" }

# discord
"discord.py" = "^2.4.0"

# fastapi
fastapi = "^0.111.0"
fastapi-admin = {git = "https://github.com/fastapi-admin/fastapi-admin", rev = "0ed771026c776138aceb4ae98eeb5c976786a193"}
uvicorn = "^0.30.1"

# database ORM
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.3"}
tortoise-cli = "^0.1.2"

# misc
rich = "^13.7.1"
python-dateutil = "^2.8.2"
Pillow = "^10.4.0"
aerich = "^0.6.3"
pyyaml = "^6.0"
cachetools = "^5.3.3"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = {version = "^23.1.0", allow-prereleases = true}


[tool.poetry.group.metrics.dependencies]
prometheus-client = "^0.16.0"

[tool.aerich]
tortoise_orm = "carfigures.__main__.TORTOISE_ORM"
location = "./migrations"
src_folder = "./carfigures"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
